FEAT: Añadir atajos y correcciones de versiones.